--- a/content/reportSumEN.tex
+++ b/content/reportSumEN.tex
@@ -3,7 +3,7 @@
 	Specialization: Electronics Engineering--Speciality of Electronics, Computer and Telecommunications. \\
 	Code: 852020301. \\
 	Name of Master Student: Tạ Viết Tài. \\
-	KAcademic year: 32 (12/2022--12/2024). \\
+	Academic year: 32 (12/2022--12/2024). \\
 	Supervisor: Tran Thi Thao Nguyen Ph.D.\\
 	At: VNUHCM--University of Science.\\
 	\vspace{1.5em}
@@ -18,17 +18,17 @@
 
 \vspace{1.5em}
 \begin{tblr}{cc}
-    \centering
-    \textbf{SUPERVISOR} & \textbf{\hspace{6.0em}MASTER STUDENT} \\
-    \\
-    \\
-    \\
-    Tran Thi Thao Nguyen Ph.D. & \hspace{6.0em} Ta Viet Tai
+	\centering
+	\textbf{SUPERVISOR}        & \textbf{\hspace{6.0em}MASTER STUDENT} \\
+	\\
+	\\
+	\\
+	Tran Thi Thao Nguyen Ph.D. & \hspace{6.0em} Ta Viet Tai
 \end{tblr}
 
 \vspace{2.5em}
 \begin{center}
-    \textbf{CERTIFICATION}\\
-	\textbf{OF UNIVERSITY OF SCIENCE} \\
-    \textbf{PRESIDENT}
+	\textbf{CERTIFICATION}\\
+	\textbf{UNIVERSITY OF SCIENCE} \\
+	\textbf{PRESIDENT}
 \end{center}
