Final thesis template

--- a/Thesis.tex
+++ b/Thesis.tex
@@ -150,16 +150,16 @@
 \faculty{Điện tử -- Viễn thông}
 \department{Điện tử -- Viễn thông và máy tính}
 \major{Kỹ thuật điện tử}
-\departmentId{852020301}
+\departmentId{xxxxxxxxx}
 \reporttype{Luận văn thạc sĩ} %luận văn tốt nghiệp | Seminar tốt nghiệp | Báo cáo môn học: Viết báo cáo khoa học bằng LaTeX 
 
 %%============ Name ==================
-\title{Cải tiến phương pháp đánh giá chất lượng \\tín hiệu điện tim cho các thiết bị đeo} % tên đề tài tiếng việt
-\titleEN{Enhancing Signal Quality Assessment Method in Electrocardiogram Signals for Wearable Devices} % tên đề tài tiếng anh
-\author{Tạ Viết Tài} %tên tác giả tiếng việt
+\title{<Tên luận văn thạc sĩ>} % tên đề tài tiếng việt
+\titleEN{<Thesis Name>} % tên đề tài tiếng anh
+\author{Author name} %tên tác giả tiếng việt
 \authorEN{Ta Viet Tai} %tên tác giả tiếng anh
 \studentid{22C41006}
-\supervisor{TS.~Trần~Thị~Thảo~Nguyên~}
+\supervisor{TS.~Supervisor}
 \projectname{Các giao thức truyền thông}
 % \mail{tttnguyen@hcmus.edu.vn}
 
@@ -184,7 +184,7 @@
 
 %Lời cam đoan:
 \pledge{
-	Tôi cam đoan Luận văn thạc sĩ ngành Kỹ thuật điện tử, hướng Điện tử--Viễn thông và Máy tính, với đề tài ``CẢI TIẾN PHƯƠNG PHÁP ĐÁNH GIÁ CHẤT LƯỢNG TÍN HIỆU ĐIỆN TIM CHO CÁC THIẾT BỊ ĐEO'' là công trình khoa học do tôi thực hiện dưới sự hướng dẫn của TS. Trần Thị Thảo Nguyên.
+	Tôi cam đoan Luận văn thạc sĩ ngành Kỹ thuật điện tử, hướng Điện tử--Viễn thông và Máy tính, với đề tài ``<TÊN LUẬN VĂN THẠC SĨ>' là công trình khoa học do tôi thực hiện dưới sự hướng dẫn của TS. Trần Thị Thảo Nguyên.
 
 	Những kết quả nghiên cứu của đề tài là hoàn toàn trung thực và chính xác.
 	%====% 
@@ -194,22 +194,18 @@
 %Lời cám ơn:
 \acknowledgement{
 	Content
-
-	Cuối cùng và cũng là quan trọng nhất, chúng tôi xin được cảm ơn tập thể ICTLAB,
-	cảm ơn gia đình vì đã luôn luôn âm thầm sát cánh, hỗ trợ chúng tôi trong suốt thời gian vừa qua.
 	%====% 
 	\postackEng
 }
 
 \abstractVN{
-	Đa truy cập phân chia theo tần số trực giao (OFDMA) được giới thiệu trong chuẩn 802.11ax để giải quyết mối liên quan của các vấn đề truyền dẫn bằng cách chia kênh thành các Đơn vị tài nguyên (RU) được phân bổ cho các Trạm (STA), đặc biệt là trong truyền dẫn đa người dùng Đường lên (UL), nhưng gặp khó khăn với nhiều STA do hạn chế về kích thước RU hoặc băng thông. Đa truy câp phi trực giao (NOMA) là một kỹ thuật mạng không dây được đánh giá cao để khắc phục những vấn đề này. IDMA có thể tận dụng các ưu điểm của NOMA, chẳng hạn như nâng cao hiệu suất phổ, dung lượng STA và tốc độ dữ liệu mà không cần thay đổi kích thước RU hoặc băng thông. Báo cáo này đề xuất sự kết hợp của Đa truy nhập phân chia xen kẽ (IDMA) để tăng số lượng STA trong nhiều người dùng UL vào hệ thống OFDMA 802.11ax hiện có. Việc kết hợp OFDMA và IDMA có thể giảm số lượng STA trên mỗi RU, giảm Nhiễu đa truy cập, đây là vấn đề khi sử dụng IDMA riêng lẻ. Kết quả cho thấy chất lượng Tỷ lệ lỗi bit (BER) giảm đáng kể so với Nhiều đầu vào nhiều người dùng (MU-MIMO), OFDMA và OFDMA-MU-MIMO hiện có trong 802.11ax. Ngoài ra, OFDMA-IDMA hỗ trợ số lượng STA gấp 5 lần OFDMA trong khi vẫn duy trì chất lượng như cũ.
-
+	Content
 	%======%
 	% \postabstractVN %Thời gian và Tên người thực hiện
 }
 
 \abstractEng{
-	Orthogonal Frequency Division Multiple Access (OFDMA) is introduced in the 802.11 ax standard system to resolve the relevance of transmission problems by splitting the channel into Resource Units (RU) allocated to Stations (STAs), especially in Uplink (UL) multi-user transmission, but struggles with many STAs due to RU size or bandwidth constraints. Non-Othorgonal Multiple Access (NOMA) is a highly appreciated wireless network technique to overcome these issues. The IDMA can take advantage of NOMA, such as enhancing spectrum efficiency, STA capacity, and data rates without RU size or bandwidth changes. This report proposes a combination of Interleave Division Multiple Access (IDMA) to massive the number of STAs in UL multi-user into the existing OFDMA system of 802.11ax. Combining the OFDMA and IDMA can reduce the number of STAs per RU, reducing the Multiple Access Interference, which is the problem when using IDMA individually. The results show a significant decrease in Bit Error Rate (BER) quality compared to existing Multiuser-Multiple Input Multiple Output (MU-MIMO), OFDMA, and OFDMA-MU-MIMO in 802.11ax. In addition, OFDMA-IDMA supports a number of STAs 5 times more than OFDMA while maintaining the same quality.% (BER of approximately. %3\times10^{−4} at SNR = 20 [dB]).
+	Content 
 	% \postabstractEng %Thời gian và Tên người thực hiện
 }
 
