--- a/content/reportSum.tex
+++ b/content/reportSum.tex
@@ -6,14 +6,20 @@
 	Khóa đào tạo: 32 (12/2022--12/2024). \\
 	Người hướng dẫn khoa học: TS. Trần Thị Thảo Nguyên.\\
 	Cơ sở đào tạo: Trường Đại học Khoa học Tự nhiên, ĐHQG.HCM. \\
-	\vspace{1.5em}
-	\textbf{1. TÓM TẮT NỘI DUNG LUẬN VĂN:}\\
-	Content1 \\
-	\textbf{2. NHỮNG KẾT QUẢ MỚI CỦA LUẬN VĂN:}\\
-	Content2 \\
-	\textbf{3. CÁC ỨNG DỤNG/ KHẢ NĂNG ỨNG DỤNG TRONG THỰC TIỄN HAY NHỮNG VẤN ĐỀ CÒN BỎ NGỎ CẦN TIẾP TỤC NGHIÊN CỨU.}\\
-	Content3 \\
 \end{flushleft}
+% \vspace{1.5em}
+
+\textbf{1. TÓM TẮT NỘI DUNG LUẬN VĂN:}
+
+Content1
+
+\textbf{2. NHỮNG KẾT QUẢ MỚI CỦA LUẬN VĂN:}
+
+Content2
+
+\textbf{3. CÁC ỨNG DỤNG/ KHẢ NĂNG ỨNG DỤNG TRONG THỰC TIỄN HAY NHỮNG VẤN ĐỀ CÒN BỎ NGỎ CẦN TIẾP TỤC NGHIÊN CỨU.}\\
+
+Content3
 
 
 \vspace{1.5em}
@@ -23,7 +29,7 @@
 	\\
 	\\
 	\\
-	TS. Trần Thị Thảo Nguyên          & \hspace{5.0em} Tạ Viết Tài
+	TS.~Giảng viên                   & \hspace{5.0em} Tên học viên
 \end{tblr}
 
 \vspace{2.5em}
