--- a/content/reportSumEN.tex
+++ b/content/reportSumEN.tex
@@ -6,24 +6,30 @@
 	Academic year: 32 (12/2022--12/2024). \\
 	Supervisor: Tran Thi Thao Nguyen Ph.D.\\
 	At: VNUHCM--University of Science.\\
-	\vspace{1.5em}
-	\textbf{1. SUMMARY:}\\
-	Content1 \\
-	\textbf{2. NOVELTY OF THESIS:}\\
-	Content2 \\
-	\textbf{3. APPLICATIONS/ APPLICABILITY/ PERSPECTIVE.}\\
-	Content3 \\
 \end{flushleft}
+% \vspace{1.5em}
+
+\textbf{1. SUMMARY:}
+
+Content1
+
+\textbf{2. NOVELTY OF THESIS:}
+
+Content2
+
+\textbf{3. APPLICATIONS/ APPLICABILITY/ PERSPECTIVE.}
+
+Content3
 
 
 \vspace{1.5em}
 \begin{tblr}{cc}
 	\centering
-	\textbf{SUPERVISOR}        & \textbf{\hspace{6.0em}MASTER STUDENT} \\
+	\textbf{SUPERVISOR}   & \textbf{\hspace{8.0em}MASTER STUDENT} \\
 	\\
 	\\
 	\\
-	Tran Thi Thao Nguyen Ph.D. & \hspace{6.0em} Ta Viet Tai
+	Supervisor name Ph.D. & \hspace{8.0em} Author name
 \end{tblr}
 
 \vspace{2.5em}
