--- a/Thesis.tex
+++ b/Thesis.tex
@@ -27,7 +27,7 @@
 	 linkcolor=red,
 	 filecolor=magenta,      
 	 urlcolor=black,
-	 pdftitle={Thesis},
+	 pdftitle={Thesis Template},
 	 pdfauthor={Ta Viet Tai}
 	 % pdfpagemode=FullScreen,
  }
