--- a/doctorvn.sty
+++ b/doctorvn.sty
@@ -23,7 +23,8 @@
 %\oddsidemargin=0mm
 %\evensidemargin=-1mm
 
-\renewcommand{\baselinestretch}{1.08} %Khoảng cách giữa 2 dòng
+\renewcommand{\baselinestretch}{1.5} %Khoảng cách giữa 2 dòng in requirement
+% \renewcommand{\baselinestretch}{1.08} %Khoảng cách giữa 2 dòng
 \setlength\belowcaptionskip{2mm}
 
 %%%
@@ -55,7 +56,8 @@
   \cleardoublepage\thispagestyle{empty}
 
   %In giấy thì chọn:
-  \newgeometry{top=16mm, bottom=16mm, left=32mm, right=17.5mm}
+  \newgeometry{top=35mm, bottom=30mm, left=35mm, right=20mm} % setting of requirement
+  % \newgeometry{top=16mm, bottom=16mm, left=32mm, right=17.5mm}
   % In CD thì chọn:
   %\newgeometry{top=23mm, bottom=23mm, left=25mm, right=24.5mm}
 
