--- a/content/reportSum.tex
+++ b/content/reportSum.tex
@@ -17,7 +17,7 @@ Content1
 
 Content2
 
-\textbf{3. CÁC ỨNG DỤNG/ KHẢ NĂNG ỨNG DỤNG TRONG THỰC TIỄN HAY NHỮNG VẤN ĐỀ CÒN BỎ NGỎ CẦN TIẾP TỤC NGHIÊN CỨU.}\\
+\textbf{3. CÁC ỨNG DỤNG/ KHẢ NĂNG ỨNG DỤNG TRONG THỰC TIỄN HAY NHỮNG VẤN ĐỀ CÒN BỎ NGỎ CẦN TIẾP TỤC NGHIÊN CỨU.}
 
 Content3
 
@@ -26,7 +26,6 @@ Content3
 \begin{tblr}{cc}
 	\centering
 	\textbf{TẬP THỂ CÁN BỘ HƯỚNG DẪN} & \textbf{\hspace{5.0em}HỌC VIÊN CAO HỌC} \\
-	\\
 	\\
 	\\
 	TS.~Giảng viên                   & \hspace{5.0em} Tên học viên
