--- a/doctorvn.sty
+++ b/doctorvn.sty
@@ -56,8 +56,7 @@
   \cleardoublepage\thispagestyle{empty}
 
   %In giấy thì chọn:
-  \newgeometry{top=35mm, bottom=30mm, left=35mm, right=20mm} % setting of requirement
-  % \newgeometry{top=16mm, bottom=16mm, left=32mm, right=17.5mm}
+  \newgeometry{top=16mm, bottom=16mm, left=32mm, right=17.5mm}
   % In CD thì chọn:
   %\newgeometry{top=23mm, bottom=23mm, left=25mm, right=24.5mm}
 
