--- a/content/Chap1.tex
+++ b/content/Chap1.tex
@@ -20,7 +20,7 @@ Ngoài ra, bài viết này sử dụng Kết hợp tỷ lệ tối đa \acrshor
 
 Cấu trúc của bài báo cáo bao gồm 5 chương như Hình \ref{fig:Struc}:
 
-\textbf{Chương \ref{Chap:Intro}}: Giới thiệu tổng quan về các kỹ thuật đa truy cập đường lên hiện có trong 802.11ax. Các ưu khuyết điểm và lý do đề xuất kỹ thuật OFDMA-IDMA.
+\textbf{Chương \ref{Chap:I}}: Giới thiệu tổng quan về các kỹ thuật đa truy cập đường lên hiện có trong 802.11ax. Các ưu khuyết điểm và lý do đề xuất kỹ thuật OFDMA-IDMA.
 
 \textbf{Chương \ref{Chap:II}}: Giới thiệu cơ sở lý thuyết của IDMA và cấu trúc bộ thu IDMA với nhiều ăng-ten.
 
