--- a/dthook.sty
+++ b/dthook.sty
@@ -384,3 +384,4 @@
 {\huge\bfseries}{\chaptertitlename\ \thechapter}{20pt}{\LARGE}
 \titleformat*{\section}{\large\bfseries}
 \titleformat*{\subsection}{\bfseries}
+\titlespacing*{\chapter}{0 pt}{-1.25 cm}{1.0 cm} 
