--- a/Thesis.tex
+++ b/Thesis.tex
@@ -141,9 +141,9 @@
 
 \firstuniversity{đại học quốc gia thành phố hồ chí minh}
 \seconduniversity{trường đại học khoa học tự nhiên}
-\faculty{Điện tử -- Viễn thông}
-\department{Điện tử -- Viễn thông và máy tính}
-\major{Kỹ thuật điện tử}
+\faculty{Faculty}
+\department{specialized}
+\major{major}
 \departmentId{xxxxxxxxx}
 \reporttype{Luận văn thạc sĩ} %luận văn tốt nghiệp | Seminar tốt nghiệp | Báo cáo môn học: Viết báo cáo khoa học bằng LaTeX 
 
@@ -151,8 +151,8 @@
 \title{<Tên luận văn thạc sĩ>} % tên đề tài tiếng việt
 \titleEN{<Thesis Name>} % tên đề tài tiếng anh
 \author{Author name} %tên tác giả tiếng việt
-\authorEN{Ta Viet Tai} %tên tác giả tiếng anh
-\studentid{22C41006}
+\authorEN{Author name} %tên tác giả tiếng anh
+\studentid{studentID}
 \supervisor{TS.~Supervisor}
 \projectname{Các giao thức truyền thông}
 % \mail{tttnguyen@hcmus.edu.vn}
@@ -179,9 +179,7 @@
 
 %Lời cam đoan:
 \pledge{
-	Tôi cam đoan Luận văn thạc sĩ ngành Kỹ thuật điện tử, hướng Điện tử--Viễn thông và Máy tính, với đề tài ``<TÊN LUẬN VĂN THẠC SĨ>' là công trình khoa học do tôi thực hiện dưới sự hướng dẫn của TS. Trần Thị Thảo Nguyên.
-
-	Những kết quả nghiên cứu của đề tài là hoàn toàn trung thực và chính xác.
+	Content
 	%====% 
 	\postpledge
 }
@@ -279,17 +277,7 @@
 %%============================
 \renewcommand\bibname{Các công trình công bố}
 \begin{thebibliography}{100}
-	% \bibitem{Boney96} T. V. Tai, M. P. N. Tan, L. H. Nam, N. V. Ha, and T. T. T. Nguyen,, ``Convergence Evaluation of OFDMA-IDMA Combination based on IEEE 802.11ax,'' in \emph{2024 16th International Conference on Knowledge and Smart Technology (KST)}, pp. 247--252, 2024.
-
-	\bibitem{MG} T. V. Tai, M. P. N. Tan, N. M. Tri, N. V. Ha, and T. T. T. Nguyen, ``A High Sensitivity SQI with Peak-Amplitude Difference Variance for Wearable ECG Signals'', in \emph{2023 5th International Conference on Bio-engineering for Smart Technologies (BioSMART)}, pp. 1--4, 2023.
-
-	\bibitem{HK} M. P. N. Tan, T. V. Tai, N. M. Tri, N. V. Ha, and T. T. T. Nguyen, ``EEG-ECG Extraction for Wearable All-in-One Healthcare Device'', in \emph{2023 6th International Conference on Electrical, Electronics and System Engineering (ICEESE)}, pp. 61--65, 2023.
-
-	\bibitem{Pan} T. V. Tai, M. P. N. Tan, D. H. Tien, \textit{et al.}, ``Signal Quality Indices based on Skewness of Peak-Peak Interval for Wearable ECG Devices'', in \emph{2023 Signal Processing: Algorithms, Architectures, Arrangements, and Applications (SPA)}, pp. 42--47, 2023.
-
-	\bibitem{MG} T. V. Tai, M. P. N. Tan, N. M. Tri, N. V. Ha, and T. T. T. Nguyen, ``Signal Quality Indices Based on Gain of Amplitude Difference for Wearable ECG Signals'', in \emph{ 2023 International Conference on Advanced Technologies for Communications (ATC)}, pp. 19--24, 2023.
-
-	\bibitem{MG} D. H. Tien, M. P. N. Tan, T. H. Nam, T. V. Tai, and T. T. T. Nguyen, ``A Low-Complexity R-Peak Detection Based on Exponential Weight Mean-Variance for Wearable ECG Devices'', in \emph{ 2023 International Conference on Advanced Technologies for Communications (ATC)}, pp. 415--420, 2023.
+	\bibitem{Boney96} T. V. Tai, M. P. N. Tan, L. H. Nam, N. V. Ha, and T. T. T. Nguyen, ``Convergence Evaluation of OFDMA-IDMA Combination based on IEEE 802.11ax,'' in \emph{2024 16th International Conference on Knowledge and Smart Technology (KST)}, pp. 247--252, 2024.
 \end{thebibliography}
 
 
