--- a/content/reportSum.tex
+++ b/content/reportSum.tex
@@ -1,11 +1,10 @@
 \begin{flushleft}
-	Tên đề tài: Cải tiến phương pháp đánh giá chất lượng tín hiệu điện tim cho các thiết bị đeo. \\
-	Ngành: Kỹ thuật điện tử, hướng Điện tử--Viễn thông và Máy tính. \\
-	Mã số ngành: 852020301. \\
-	Họ và tên học viên cao học: Tạ Viết Tài. \\
-	Khóa đào tạo: 32 (12/2022--12/2024). \\
-	Người hướng dẫn khoa học: TS. Trần Thị Thảo Nguyên.\\
-	Cơ sở đào tạo: Trường Đại học Khoa học Tự nhiên, ĐHQG.HCM. \\
+	Tên đề tài:  \\
+	Mã số ngành:  \\
+	Họ và tên học viên cao học:  \\
+	Khóa đào tạo:  \\
+	Người hướng dẫn khoa học: \\
+	Cơ sở đào tạo: \\
 \end{flushleft}
 % \vspace{1.5em}
 
