--- a/content/reportSumEN.tex
+++ b/content/reportSumEN.tex
@@ -1,11 +1,11 @@
 \begin{flushleft}
-	Thesis title: Enhancing Signal Quality Assessment Method in Electrocardiogram Signals for Wearable Devices. \\
-	Specialization: Electronics Engineering--Speciality of Electronics, Computer and Telecommunications. \\
-	Code: 852020301. \\
-	Name of Master Student: Tạ Viết Tài. \\
-	Academic year: 32 (12/2022--12/2024). \\
-	Supervisor: Tran Thi Thao Nguyen Ph.D.\\
-	At: VNUHCM--University of Science.\\
+	Thesis title:  \\
+	Specialization:  \\
+	Code:  \\
+	Name of Master Student:  \\
+	Academic year:  \\
+	Supervisor: \\
+	At: \\
 \end{flushleft}
 % \vspace{1.5em}
 
@@ -25,10 +25,10 @@ Content3
 \vspace{1.5em}
 \begin{tblr}{cc}
 	\centering
-	\textbf{SUPERVISOR}   & \textbf{\hspace{8.0em}MASTER STUDENT} \\
+	\textbf{SUPERVISOR} & \textbf{\hspace{8.0em}MASTER STUDENT} \\
 	\\
 	\\
-	Supervisor name Ph.D. & \hspace{8.0em} Author name
+	Supervisor name     & \hspace{8.0em} Author name
 \end{tblr}
 
 \vspace{2.5em}
