add vietnamese style acr

--- a/doctorvn.sty
+++ b/doctorvn.sty
@@ -419,4 +419,4 @@
       {\end{longtable}}
 }
 
-\newcommand\acrfullvn[2][]{\acrlong[#1]{#2} -- \acrshort[#1]{#2}}
+\newcommand\acrfullvn[2][]{(\acrlong[#1]{#2} -- \acrshort[#1]{#2})}
